--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jes3rk/bamazon#readme",
   "dependencies": {
+    "console.table": "^0.9.1",
     "inquirer": "^4.0.1",
     "mysql": "^2.15.0"
   }
